dificultad 2 todo completado

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "html = requests.get(url).text"
    ]
   },
   {
@@ -73,7 +73,48 @@
    },
    "outputs": [],
    "source": [
-    "#your code"
+    "soup = BeautifulSoup(html, \"html.parser\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_wiki = soup.find_all('div', id = 'bodyContent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_wiki = list_wiki[0].find_all('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "links = []\n",
+    "for i in list_wiki:\n",
+    "    try:\n",
+    "        links.append(i.attrs['href'])\n",
+    "    except:\n",
+    "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(links)"
    ]
   },
   {
@@ -95,6 +136,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "absolute = [i for i in links if \"%\" not in i and \"http\" in i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "domain = 'http://wikipedia.org'"
    ]
   },
@@ -104,7 +154,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "relative = [i for i in links if i.startswith(\"/wiki\") and \"%\" not in i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "relative = [domain + i for i in relative]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "links_end = absolute + relative"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(links_end)"
    ]
   },
   {
@@ -129,7 +206,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "try:\n",
+    "    os.mkdir(\"C:/Users/eloyl/Desktop/Ironhack/4.4-lab-parallelization/your-code/wikipedia\")\n",
+    "    \n",
+    "except:\n",
+    "    print('ya esta')"
    ]
   },
   {
@@ -138,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "os.chdir(\"C:/Users/eloyl/Desktop/Ironhack/4.4-lab-parallelization/your-code/wikipedia\")"
    ]
   },
   {
@@ -162,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install python-slugify"
+    "#pip install python-slugify"
    ]
   },
   {
@@ -183,7 +264,24 @@
    "outputs": [],
    "source": [
     "def index_page(s):\n",
-    "    pass"
+    "    try:\n",
+    "        content = requests.get(s)\n",
+    "        name = slugify(s)\n",
+    "        with open(f'{name}.html', 'w') as f:\n",
+    "            f.write(content.text)\n",
+    "    except:\n",
+    "        pass    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "index_page(\"https://www.google.com/\")"
    ]
   },
   {
@@ -201,7 +299,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for i in tqdm(links_end):\n",
+    "    #index_page(i)"
    ]
   },
   {
@@ -219,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import multiprocessing"
+    "import multiprocessing as mp"
    ]
   },
   {
@@ -228,15 +336,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "mp.cpu_count()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pool=mp.Pool(14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time \n",
+    "res=pool.map(index_page, links_end)\n",
+    "pool.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IronHack",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ironhack"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -248,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
