--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "import requests as req\n",
     "\n",
     "url = 'https://en.wikipedia.org/wiki/Data_science'"
    ]
@@ -45,7 +45,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "html1 = req.get(url).content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# html1"
    ]
   },
   {
@@ -61,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup\n",
+    "from bs4 import BeautifulSoup as bs\n",
     "import re"
    ]
   },
@@ -69,11 +78,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "#your code"
+    "sopa_wiki = bs(html1, 'html.parser')\n",
+    "box = sopa_wiki.find_all('a')\n",
+    "\n",
+    "links_maybe = []\n",
+    "for e in box:\n",
+    "    try:\n",
+    "        links_maybe.append(e.attrs['href'])\n",
+    "    except:\n",
+    "        pass\n",
+    "\n",
+    "links_reales = []\n",
+    "for link in links_maybe:\n",
+    "    if link.startswith('/'):\n",
+    "        links_reales.append(link)\n",
+    "\n",
+    "# links_reales"
    ]
   },
   {
@@ -104,7 +128,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "html2 = req.get(domain).content\n",
+    "sopa_wiki = bs(html2, 'html.parser')\n",
+    "box = sopa_wiki.find_all('a')\n",
+    "\n",
+    "links_pos = [e.attrs['href'] for e in box]\n",
+    "\n",
+    "links_limp = []\n",
+    "for link in links_pos:\n",
+    "    if '%' not in link and 'https' not in link:\n",
+    "        links_limp.append(domain+link)\n",
+    "    else:\n",
+    "        links_limp.append(link)\n",
+    "        \n",
+    "# links_limp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "relative = [(domain+link) for link in [e.attrs['href'] for e in ((bs((req.get(domain).content), 'html.parser')).find_all('a'))] if '%' not in link and 'https' not in link]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "absolute = [link for link in [e.attrs['href'] for e in ((bs((req.get(domain).content), 'html.parser')).find_all('a'))] if 'https' in link]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "links_final = [relative + absolute]\n",
+    "# links_final"
    ]
   },
   {
@@ -129,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "path = os.getcwd()+'/wikipedia'"
    ]
   },
   {
@@ -138,7 +203,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "os.mkdir(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.getcwd()"
    ]
   },
   {
@@ -162,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install python-slugify"
+    "!pip install python-slugify"
    ]
   },
   {
@@ -179,11 +262,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "slugify(domain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def index_page(s):\n",
-    "    pass"
+    "def index_page(link):\n",
+    "    \n",
+    "    html2 = req.get(link).content\n",
+    "    texto = bs(html2, 'html.parser').text.replace('\\n', \" \").strip()\n",
+    "\n",
+    "    nombre_archivo = slugify(link)\n",
+    "\n",
+    "    with open(nombre_archivo, 'w' , encoding=\"utf-8\") as f:\n",
+    "        f.write(texto)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "index_page(domain)"
    ]
   },
   {
@@ -201,7 +324,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "%pip install tqdm\n",
+    "from tqdm.notebook import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "for i in tqdm(absolute):\n",
+    "    index_page(i)"
    ]
   },
   {
@@ -219,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import multiprocessing"
+    "import multiprocessing as mp"
    ]
   },
   {
@@ -228,15 +364,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "mp.cpu_count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "        \n",
+    "pool=mp.Pool(mp.cpu_count())\n",
+    "res = pool.map_async(index_page, tqdm(absolute)).get()\n",
+    "pool.close()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IronHack",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ironhack"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
