--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "import requests as req\n",
     "\n",
     "url = 'https://en.wikipedia.org/wiki/Data_science'"
    ]
@@ -45,7 +45,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "#your code\n",
+    "req.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hay que instalar primero cositas\n",
+    "\n",
+    "from selenium import webdriver\n",
+    "\n",
+    "import time\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "\n",
+    "PATH=ChromeDriverManager().install()\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver=webdriver.Chrome(PATH)\n",
+    "driver.get(url)  #abrir la web\n",
+    "\n",
+    "html=req.get(url).text  #extraer el html en string\n",
+    "html[:1000]\n",
+    "\n",
+    "\n",
+    "time.sleep(2)\n",
+    "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html[:100]"
    ]
   },
   {
@@ -61,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup\n",
+    "from bs4 import BeautifulSoup as bs\n",
     "import re"
    ]
   },
@@ -73,7 +122,56 @@
    },
    "outputs": [],
    "source": [
-    "#your code"
+    "url = 'https://en.wikipedia.org/wiki/Data_science'\n",
+    "html=req.get(url).text\n",
+    "sopa=bs(html, 'html.parser')    #Esto anterior es cte para definir la sopa "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver=webdriver.Chrome(PATH)\n",
+    "driver.get(url)  #abrir la web  #abrir la web"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "links=sopa.find_all('a')\n",
+    "len(links)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "links[2]['href']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "links_sol=[]\n",
+    "\n",
+    "for i in range(1,len(links)):\n",
+    "    try:\n",
+    "        links_sol.append(links[i]['href'])\n",
+    "    except:\n",
+    "        continue\n",
+    "    \n",
+    "    \n",
+    "links_sol[:3]"
    ]
   },
   {
@@ -104,7 +202,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "links_sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "absolute=[]\n",
+    "relative=[]\n",
+    "domain = 'http://wikipedia.org'\n",
+    "\n",
+    "for i in range(len (links_sol)):\n",
+    "    if links_sol[i].startswith('http') and ('%') not in links_sol[i]:\n",
+    "        absolute.append(links_sol[i])\n",
+    "    if links_sol[i].startswith('/') and ('%') not in links_sol[i]:\n",
+    "        relative.append(domain + links_sol[i])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "absolute=[(links_sol[i]) for i in range (len (links_sol)) if links_sol[i].startswith('http') and ('%') not in links_sol[i]]\n",
+    "absolute[:3]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "relative=[(domain + links_sol[i]) for i in range(len(links_sol))if links_sol[i].startswith('/') and ('%') not in links_sol[i]]\n",
+    "relative[:3]"
    ]
   },
   {
@@ -129,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "os.mkdir('/Users/mar/solucion')"
    ]
   },
   {
@@ -138,7 +273,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "os.getcwd()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('/Users/mar/solucion')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.getcwd()"
    ]
   },
   {
@@ -162,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install python-slugify"
+    "!pip install python-slugify"
    ]
   },
   {
@@ -182,8 +335,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def index_page(s):\n",
-    "    pass"
+    "def index_page(url):\n",
+    "    nombre=slugify(url)+('.html')\n",
+    "    f=open(nombre, 'x')\n",
+    "    html=req.get(url, verify=False).text\n",
+    "    f.write(html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index_page('https://en.wikipedia.org/wiki/nutria')"
    ]
   },
   {
@@ -201,7 +366,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "links_unicos=set(absolute)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "for i in links_unicos:\n",
+    "    try:\n",
+    "        index_page(i)\n",
+    "    except:\n",
+    "        pass"
    ]
   },
   {
@@ -219,7 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import multiprocessing"
+    "%pip install tqdm"
    ]
   },
   {
@@ -228,15 +408,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "from tqdm.notebook import tqdm"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import multiprocessing as mp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install multiprocess\n",
+    "\n",
+    "import multiprocess as mp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "mp.cpu_count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pool=mp.Pool(mp.cpu_count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "res= pool.map(index_page, links_unicos)\n",
+    "pool.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IronHack",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ironhack"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
