v2 arreglado paralelizacion con nueva libreria

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,9 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "296"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(links)"
    ]
@@ -132,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,9 +188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "188"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(links_end)"
    ]
@@ -193,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,9 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ya esta\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    os.mkdir(\"C:/Users/eloyl/Desktop/Ironhack/4.4-lab-parallelization/your-code/wikipedia\")\n",
@@ -215,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,23 +289,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "def index_page(s):\n",
     "    try:\n",
-    "        content = requests.get(s)\n",
+    "        content = requests.get(s).text\n",
     "        name = slugify(s)\n",
     "        with open(f'{name}.html', 'w') as f:\n",
-    "            f.write(content.text)\n",
+    "            f.write(content)\n",
+    "            f.close()\n",
     "    except:\n",
     "        pass    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -295,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,12 +335,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 188/188 [01:49<00:00,  1.71it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "#for i in tqdm(links_end):\n",
-    "    #index_page(i)"
+    "for i in tqdm(links_end):\n",
+    "    index_page(i)"
    ]
   },
   {
@@ -323,25 +362,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import multiprocessing as mp"
+    "#pip install multiprocess"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import multiprocess as mp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mp.cpu_count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,13 +409,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 15.6 ms\n",
+      "Wall time: 17 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time \n",
     "res=pool.map(index_page, links_end)\n",
-    "pool.close()"
+    "pool.close()\n",
+    "res[:50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "188"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(links_end)"
    ]
   },
   {
@@ -364,14 +512,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#la función corre que la he comprobado con una lamba pero no me crea los archivos al contrario que con un simple bucle for"
+   ]
   }
  ],
  "metadata": {
