--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -30,22 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "import requests as req\n",
     "\n",
     "url = 'https://en.wikipedia.org/wiki/Data_science'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "html= req.get(url).text\n"
    ]
   },
   {
@@ -57,23 +57,282 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup\n",
+    "from bs4 import BeautifulSoup as bs\n",
     "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'#Early_usage',\n",
+       " '#Etymology',\n",
+       " '#Foundations',\n",
+       " '#Modern_usage',\n",
+       " '#References',\n",
+       " '#Relationship_to_statistics',\n",
+       " '#See_also',\n",
+       " '#cite_note-1',\n",
+       " '#cite_note-10',\n",
+       " '#cite_note-11',\n",
+       " '#cite_note-12',\n",
+       " '#cite_note-13',\n",
+       " '#cite_note-14',\n",
+       " '#cite_note-15',\n",
+       " '#cite_note-16',\n",
+       " '#cite_note-17',\n",
+       " '#cite_note-18',\n",
+       " '#cite_note-2',\n",
+       " '#cite_note-20',\n",
+       " '#cite_note-21',\n",
+       " '#cite_note-23',\n",
+       " '#cite_note-25',\n",
+       " '#cite_note-26',\n",
+       " '#cite_note-27',\n",
+       " '#cite_note-28',\n",
+       " '#cite_note-29',\n",
+       " '#cite_note-4',\n",
+       " '#cite_note-7',\n",
+       " '#cite_note-8',\n",
+       " '#cite_note-9',\n",
+       " '#cite_note-:1-24',\n",
+       " '#cite_note-:2-3',\n",
+       " '#cite_note-:5-30',\n",
+       " '#cite_note-:6-31',\n",
+       " '#cite_note-:7-19',\n",
+       " '#cite_note-BellHey2009-6',\n",
+       " '#cite_note-Murtagh_2018_14-22',\n",
+       " '#cite_note-TansleyTolle2009-5',\n",
+       " '#cite_ref-1',\n",
+       " '#cite_ref-10',\n",
+       " '#cite_ref-11',\n",
+       " '#cite_ref-12',\n",
+       " '#cite_ref-13',\n",
+       " '#cite_ref-14',\n",
+       " '#cite_ref-15',\n",
+       " '#cite_ref-16',\n",
+       " '#cite_ref-17',\n",
+       " '#cite_ref-18',\n",
+       " '#cite_ref-2',\n",
+       " '#cite_ref-20',\n",
+       " '#cite_ref-21',\n",
+       " '#cite_ref-23',\n",
+       " '#cite_ref-25',\n",
+       " '#cite_ref-26',\n",
+       " '#cite_ref-27',\n",
+       " '#cite_ref-28',\n",
+       " '#cite_ref-29',\n",
+       " '#cite_ref-4',\n",
+       " '#cite_ref-7',\n",
+       " '#cite_ref-8',\n",
+       " '#cite_ref-9',\n",
+       " '#cite_ref-:1_24-0',\n",
+       " '#cite_ref-:1_24-1',\n",
+       " '#cite_ref-:1_24-2',\n",
+       " '#cite_ref-:2_3-0',\n",
+       " '#cite_ref-:2_3-1',\n",
+       " '#cite_ref-:2_3-2',\n",
+       " '#cite_ref-:2_3-3',\n",
+       " '#cite_ref-:2_3-4',\n",
+       " '#cite_ref-:5_30-0',\n",
+       " '#cite_ref-:6_31-0',\n",
+       " '#cite_ref-:7_19-0',\n",
+       " '#cite_ref-:7_19-1',\n",
+       " '#cite_ref-BellHey2009_6-0',\n",
+       " '#cite_ref-Murtagh_2018_14_22-0',\n",
+       " '#cite_ref-Murtagh_2018_14_22-1',\n",
+       " '#cite_ref-TansleyTolle2009_5-0',\n",
+       " '//creativecommons.org/licenses/by-sa/3.0/',\n",
+       " '//en.wikipedia.org/wiki/Wikipedia:Contact_us',\n",
+       " '//en.wikipedia.org/wiki/Wikipedia:Text_of_Creative_Commons_Attribution-ShareAlike_3.0_Unported_License',\n",
+       " '//foundation.wikimedia.org/wiki/Privacy_policy',\n",
+       " '//foundation.wikimedia.org/wiki/Terms_of_Use',\n",
+       " '//www.wikimediafoundation.org/',\n",
+       " '/w/index.php?title=Data_science&action=edit',\n",
+       " '/w/index.php?title=Data_science&action=edit&section=1',\n",
+       " '/w/index.php?title=Data_science&action=edit&section=2',\n",
+       " '/w/index.php?title=Data_science&action=edit&section=3',\n",
+       " '/w/index.php?title=Data_science&action=edit&section=4',\n",
+       " '/w/index.php?title=Data_science&action=edit&section=5',\n",
+       " '/w/index.php?title=Data_science&action=edit&section=6',\n",
+       " '/w/index.php?title=Data_science&action=edit&section=7',\n",
+       " '/w/index.php?title=Data_science&action=history',\n",
+       " '/w/index.php?title=Data_science&action=info',\n",
+       " '/w/index.php?title=Data_science&oldid=1107201798',\n",
+       " '/w/index.php?title=Data_science&printable=yes',\n",
+       " '/w/index.php?title=Special:CiteThisPage&page=Data_science&id=1107201798&wpFormIdentifier=titleform',\n",
+       " '/w/index.php?title=Special:CreateAccount&returnto=Data+science',\n",
+       " '/w/index.php?title=Special:DownloadAsPdf&page=Data_science&action=show-download-screen',\n",
+       " '/w/index.php?title=Special:UserLogin&returnto=Data+science',\n",
+       " '/wiki/Academic_discipline',\n",
+       " '/wiki/Algorithm',\n",
+       " '/wiki/American_Statistical_Association',\n",
+       " '/wiki/Analysis',\n",
+       " '/wiki/Andrew_Gelman',\n",
+       " '/wiki/Astronomical_survey',\n",
+       " '/wiki/Basic_research',\n",
+       " '/wiki/Ben_Fry',\n",
+       " '/wiki/Big_data',\n",
+       " '/wiki/Business',\n",
+       " '/wiki/Buzzword',\n",
+       " '/wiki/C._F._Jeff_Wu',\n",
+       " '/wiki/Category:Articles_with_short_description',\n",
+       " '/wiki/Category:Computational_fields_of_study',\n",
+       " '/wiki/Category:Computer_occupations',\n",
+       " '/wiki/Category:Data_analysis',\n",
+       " '/wiki/Category:Information_science',\n",
+       " '/wiki/Category:Short_description_matches_Wikidata',\n",
+       " '/wiki/Category:Use_dmy_dates_from_August_2021',\n",
+       " '/wiki/Columbia_University',\n",
+       " '/wiki/Comet_NEOWISE',\n",
+       " '/wiki/Communication',\n",
+       " '/wiki/Computational_science',\n",
+       " '/wiki/Computer_science',\n",
+       " '/wiki/DJ_Patil',\n",
+       " '/wiki/Data',\n",
+       " '/wiki/Data_analysis',\n",
+       " '/wiki/Data_archaeology',\n",
+       " '/wiki/Data_augmentation',\n",
+       " '/wiki/Data_cleansing',\n",
+       " '/wiki/Data_collection',\n",
+       " '/wiki/Data_compression',\n",
+       " '/wiki/Data_corruption',\n",
+       " '/wiki/Data_curation',\n",
+       " '/wiki/Data_degradation',\n",
+       " '/wiki/Data_editing',\n",
+       " '/wiki/Data_extraction',\n",
+       " '/wiki/Data_farming',\n",
+       " '/wiki/Data_format_management',\n",
+       " '/wiki/Data_fusion',\n",
+       " '/wiki/Data_integration',\n",
+       " '/wiki/Data_integrity',\n",
+       " '/wiki/Data_library',\n",
+       " '/wiki/Data_lineage',\n",
+       " '/wiki/Data_loss',\n",
+       " '/wiki/Data_management',\n",
+       " '/wiki/Data_migration',\n",
+       " '/wiki/Data_mining',\n",
+       " '/wiki/Data_philanthropy',\n",
+       " '/wiki/Data_pre-processing',\n",
+       " '/wiki/Data_preservation',\n",
+       " '/wiki/Data_publishing',\n",
+       " '/wiki/Data_quality',\n",
+       " '/wiki/Data_recovery',\n",
+       " '/wiki/Data_reduction',\n",
+       " '/wiki/Data_retention',\n",
+       " '/wiki/Data_science',\n",
+       " '/wiki/Data_scraping',\n",
+       " '/wiki/Data_scrubbing',\n",
+       " '/wiki/Data_security',\n",
+       " '/wiki/Data_set',\n",
+       " '/wiki/Data_sonification',\n",
+       " '/wiki/Data_steward',\n",
+       " '/wiki/Data_storage',\n",
+       " '/wiki/Data_validation',\n",
+       " '/wiki/Data_warehouse',\n",
+       " '/wiki/Data_wrangling',\n",
+       " '/wiki/Database',\n",
+       " '/wiki/David_Donoho',\n",
+       " '/wiki/Distributed_computing',\n",
+       " '/wiki/Domain_knowledge',\n",
+       " '/wiki/Empirical_research',\n",
+       " '/wiki/Exploration',\n",
+       " '/wiki/Extract,_load,_transform',\n",
+       " '/wiki/Extract,_transform,_load',\n",
+       " '/wiki/Graphic_design',\n",
+       " '/wiki/Help:Category',\n",
+       " '/wiki/Help:Contents',\n",
+       " '/wiki/Help:Introduction',\n",
+       " '/wiki/Human%E2%80%93computer_interaction',\n",
+       " '/wiki/Informatics',\n",
+       " '/wiki/Information_explosion',\n",
+       " '/wiki/Information_privacy',\n",
+       " '/wiki/Information_science',\n",
+       " '/wiki/Information_technology',\n",
+       " '/wiki/Interdisciplinarity',\n",
+       " '/wiki/Jeff_Hammerbacher',\n",
+       " '/wiki/Jeffrey_T._Leek',\n",
+       " '/wiki/Jim_Gray_(computer_scientist)',\n",
+       " '/wiki/John_Tukey',\n",
+       " '/wiki/Knowledge',\n",
+       " '/wiki/Machine_learning',\n",
+       " '/wiki/Main_Page',\n",
+       " '/wiki/Mathematics',\n",
+       " '/wiki/Montpellier_2_University',\n",
+       " '/wiki/Nate_Silver',\n",
+       " '/wiki/Nathan_Yau',\n",
+       " '/wiki/National_Science_Board',\n",
+       " '/wiki/ODSC',\n",
+       " '/wiki/Peter_Naur',\n",
+       " '/wiki/Portal:Current_events',\n",
+       " '/wiki/Problem_solving',\n",
+       " '/wiki/Scientific_Data_(journal)',\n",
+       " '/wiki/Scientific_method',\n",
+       " '/wiki/Space_telescope',\n",
+       " '/wiki/Special:BookSources/0-12-241770-4',\n",
+       " '/wiki/Special:BookSources/978-0-9825442-0-4',\n",
+       " '/wiki/Special:BookSources/9784431702085',\n",
+       " '/wiki/Special:MyContributions',\n",
+       " '/wiki/Special:MyTalk',\n",
+       " '/wiki/Special:Random',\n",
+       " '/wiki/Special:RecentChanges',\n",
+       " '/wiki/Special:RecentChangesLinked/Data_science',\n",
+       " '/wiki/Special:SpecialPages',\n",
+       " '/wiki/Special:WhatLinksHere/Data_science',\n",
+       " '/wiki/Statistics',\n",
+       " '/wiki/Talk:Data_science',\n",
+       " '/wiki/Template:Data',\n",
+       " '/wiki/Template_talk:Data',\n",
+       " '/wiki/Turing_Award',\n",
+       " '/wiki/Unstructured_data',\n",
+       " '/wiki/Vasant_Dhar',\n",
+       " '/wiki/Wide-field_Infrared_Survey_Explorer',\n",
+       " '/wiki/Wikipedia:About',\n",
+       " '/wiki/Wikipedia:Community_portal',\n",
+       " '/wiki/Wikipedia:Contents',\n",
+       " '/wiki/Wikipedia:File_Upload_Wizard',\n",
+       " '/wiki/Wikipedia:General_disclaimer',\n",
+       " '/wiki/William_S._Cleveland',\n",
+       " 'https://commons.wikimedia.org/wiki/Category:Data_science',\n",
+       " 'https://developer.wikimedia.org',\n",
+       " 'https://donate.wikimedia.org/wiki/Special:FundraiserRedirector?utm_source=donate&utm_medium=sidebar&utm_campaign=C13_en.wikipedia.org&uselang=en',\n",
+       " 'https://en.wikipedia.org/w/index.php?title=Data_science&oldid=1107201798',\n",
+       " 'https://en.wikiversity.org/wiki/Data_science',\n",
+       " 'https://foundation.wikimedia.org/wiki/Cookie_statement',\n",
+       " 'https://foundation.wikimedia.org/wiki/Privacy_policy',\n",
+       " 'https://stats.wikimedia.org/#/en.wikipedia.org',\n",
+       " 'https://wikimediafoundation.org/',\n",
+       " 'https://www.mediawiki.org/',\n",
+       " 'https://www.wikidata.org/wiki/Special:EntityPage/Q2374463'}"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code"
+    "sopa = bs(html, 'html.parser')\n",
+    "links= sopa.find_all('a', class_ = None)[1:]\n",
+    "links_href= []\n",
+    "\n",
+    "\n",
+    "for i in range(len(links)):\n",
+    "    links_href.append(links[i].attrs['href'])\n",
+    "\n",
+    "links_OK= set(links_href)\n",
+    "\n",
+    "links_OK"
    ]
   },
   {
@@ -91,11 +350,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "domain = 'http://wikipedia.org'"
+    "domain = 'http://wikipedia.org'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "links_OK = list(links_OK)\n",
+    "relative_links= []\n",
+    "absolute_links= []\n",
+    "absolute_linksOK = []\n",
+    "relative_linksOK = []\n",
+    "for i in links_OK:   # creamos los links relativos\n",
+    "    if i[0] == f'/':\n",
+    "        relative_links.append(i)\n",
+    "for i in links_OK:   # creamos los links absolutos\n",
+    "    if i[0] != f'/':\n",
+    "        absolute_links.append(i)    \n",
+    "\n",
+    "\n",
+    "'''\n",
+    "for i in absolute_links:  # eliminamos de los links absolutos los que contengan el caracter '%'\n",
+    "    if '%' in i:\n",
+    "        absolute_links.remove(i) '''\n",
+    "        \n",
+    "for i in absolute_links: # dejamos de los links absolutos solamente los que empiezan con https\n",
+    "    if i[0] == 'h':\n",
+    "        absolute_linksOK.append(i)\n",
+    "\n",
+    "        \n",
+    "for i in relative_links:\n",
+    "    relative_linksOK.append( domain + i)\n",
+    "\n",
+    "    \n"
    ]
   },
   {
@@ -104,7 +398,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -116,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,21 +421,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#your code"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#your code"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -197,11 +489,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "#your code "
    ]
   },
   {
@@ -234,9 +526,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IronHack",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ironhack"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
