--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -20,6 +20,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "import requests as req\n",
+    "from bs4 import BeautifulSoup as bs\n",
+    "import pandas as pd\n",
+    "from selenium.webdriver.common.by import By"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "\n",
     "\n",
     "url = 'https://en.wikipedia.org/wiki/Data_science'"
    ]
@@ -45,7 +61,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "#your code\n",
+    "html=req.get(url).text\n",
+    "\n",
+    "html[:1000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install attrs\n"
    ]
   },
   {
@@ -60,9 +88,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup\n",
-    "import re"
+    "url2 = 'https://en.wikipedia.org/wiki/Data_science'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html=req.get(url2).text\n",
+    "\n",
+    "html[:1000]"
    ]
   },
   {
@@ -73,8 +118,31 @@
    },
    "outputs": [],
    "source": [
-    "#your code"
+    "soup=bs(html, 'html.parser')\n",
+    "\n",
+    "soup"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst= soup.find_all('a', class_=None)[1:]\n",
+    "lst2 =[]\n",
+    "for i in range(len(lst)):\n",
+    "    lst2.append(lst[i].attrs['href'].strip())\n",
+    "lst2=set(lst2)\n",
+    "lst2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -104,8 +172,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "\n",
+    "absolutos = []\n",
+    "relativos = []\n",
+    "for e in lst2:\n",
+    "    if 'http' in e:\n",
+    "        if '%' not in e:\n",
+    "            absolutos.append(domain + e)\n",
+    "    elif '/' in e:\n",
+    "        if '%' not in e:\n",
+    "            e = e.replace('/','//')\n",
+    "            relativos.append(e)\n",
+    "    else:\n",
+    "        continue\n",
+    "total= absolutos+relativos\n",
+    "\n",
+    "total"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -120,7 +210,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "\n",
+    "from pathlib import Path\n",
+    "Path.cwd()"
    ]
   },
   {
@@ -129,7 +222,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "#your code\n",
+    "\n",
+    "folder = 'wikipedia'\n",
+    "\n",
+    "try:\n",
+    "    os.mkdir(folder)\n",
+    "\n",
+    "except OSError:\n",
+    "\n",
+    "    print ('Directorio {} fallido'.format(folder))\n",
+    "else:\n",
+    "\n",
+    "    print ('Creado con exito {}'.format(folder))\n",
+    "    \n",
+    "\n"
    ]
   },
   {
@@ -138,7 +245,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "#your code\n",
+    "try:\n",
+    "    os.chdir('wikipedia')\n",
+    "except OSError:\n",
+    "    print ('No cambia')\n",
+    "else:\n",
+    "    print ('Ok')"
    ]
   },
   {
@@ -162,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install python-slugify"
+    "#pip install python-slugify"
    ]
   },
   {
@@ -183,7 +296,12 @@
    "outputs": [],
    "source": [
     "def index_page(s):\n",
-    "    pass"
+    "   texto=req.get(url).text\n",
+    "   r = slugify(texto)\n",
+    "   f = open('name+'.html',x)\n",
+    "   f.write(r)\n",
+    "   f.close()\n",
+    "   pass"
    ]
   },
   {
@@ -201,7 +319,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "%%time\n",
+    "\n",
+    "lista =[index_page(e) for e in total2]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "for e in total:\n",
+    "    index_page(e)"
    ]
   },
   {
@@ -219,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import multiprocessing"
+    "#pip install multiprocess"
    ]
   },
   {
@@ -228,15 +361,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "import multiprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "pool = multiprocess.Pool()\n",
+    "result = pool.map(index_page, total)\n",
+    "pool.terminate()\n",
+    "pool.join()\n",
+    "multiproceso = [index_page(e) for e in total]"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IronHack",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
-   "name": "ironhack"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -248,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.5"
   },
   "toc": {
    "base_numbering": 1,
@@ -291,6 +439,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
