--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -34,9 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "\n",
-    "url = 'https://en.wikipedia.org/wiki/Data_science'"
+    "%pip install requests"
    ]
   },
   {
@@ -45,7 +43,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "import requests\n",
+    "\n",
+    "url = 'https://en.wikipedia.org/wiki/Data_science'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "res = requests.get(url)\n",
+    "res.text"
    ]
   },
   {
@@ -73,8 +85,27 @@
    },
    "outputs": [],
    "source": [
-    "#your code"
+    "import urllib.request as urllib2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html_page = urllib2.urlopen(url)\n",
+    "soup = BeautifulSoup(html_page)\n",
+    "links =soup.find_all('a')\n",
+    "#links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -104,7 +135,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "relative_links = []\n",
+    "\n",
+    "\n",
+    "for i in soup.find_all('nav'):\n",
+    "    for url in i.find_all('a'):\n",
+    "        if('http' not in url['href']):\n",
+    "            relative_links.append(url['href'])\n",
+    "            \n",
+    "            \n",
+    "#relative_links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "absolute_links  = []\n",
+    "\n",
+    "for i in soup.find_all('nav'):\n",
+    "    for url in i.find_all('a'):\n",
+    "        if('http' in url['href']):\n",
+    "            absolute_links.append(url['href'])\n",
+    "\n",
+    "#absolute_links"
    ]
   },
   {
@@ -116,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,11 +181,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success created the directory /Users/jeffworker/Documents/GitHub/Bootcamp/Laboratorios/4.4-lab-parallelization/wikipedia\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "path = \"/Users/jeffworker/Documents/GitHub/Bootcamp/Laboratorios/4.4-lab-parallelization/wikipedia\"\n",
+    "\n",
+    "try:\n",
+    "    os.makedirs(path)\n",
+    "except OSError:\n",
+    "    print (\"Creation of the directory %s failed\" % path)\n",
+    "else:\n",
+    "    print (\"Success created the directory %s\" % path) "
    ]
   },
   {
@@ -137,9 +208,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#your code"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -158,32 +227,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: python-slugify in /Users/jeffworker/opt/anaconda3/lib/python3.9/site-packages (5.0.2)\n",
+      "Requirement already satisfied: text-unidecode>=1.3 in /Users/jeffworker/opt/anaconda3/lib/python3.9/site-packages (from python-slugify) (1.3)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "#!pip install python-slugify"
+    "%pip install python-slugify "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "from slugify import slugify\n",
     "\n",
     "unicode=str()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def index_page(s):\n",
-    "    pass"
    ]
   },
   {
@@ -200,9 +269,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#your code"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -215,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,19 +312,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: tqdm in /Users/jeffworker/opt/anaconda3/lib/python3.9/site-packages (4.64.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "from tqdm.notebook import tqdm\n",
+    "import multiprocessing as mp"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting multiprocess\n",
+      "  Downloading multiprocess-0.70.13-py39-none-any.whl (132 kB)\n",
+      "\u001b[K     |████████████████████████████████| 132 kB 2.7 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting dill>=0.3.5.1\n",
+      "  Downloading dill-0.3.5.1-py2.py3-none-any.whl (95 kB)\n",
+      "\u001b[K     |████████████████████████████████| 95 kB 2.3 MB/s eta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: dill, multiprocess\n",
+      "Successfully installed dill-0.3.5.1 multiprocess-0.70.13\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install multiprocess\n",
+    "import multiprocess as mp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IronHack",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ironhack"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
